* pl/builtinwakati.pl: Added new wakatigaki subroutine. * wakatidict: Added new directory. * wakatidict/Makefile.am: Likewise. * pl/wakati.pl: Support $WAKATI="module_builtin". * scripts/mknmz.in: Likewise.   Added --use-builtinwakati option * pl/usage.pl: Likewise. * scripts/load_dict.in: Added new file for convert kakasidict to   SDBM_File. * scripts/Makefile.am: Added load_dict.pl * configure.in: Added --enable-build-wakatidict option. * Makefile.am(SUBDIRS): Likewise.   (BUILT_WAKATIDICT): Set wakatidict if BUILD_WAKATIDICT.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,11 +10,19 @@ BUILT_TKNAMAZU =
 DIST_TKNAMAZU = tknamazu
 endif
 
+if BUILD_WAKATIDICT
+BUILT_WAKATIDICT = wakatidict
+else
+BUILT_WAKATIDICT =
+endif
+
 SUBDIRS = m4 conf doc etc filter po lib nmz pl src lisp scripts man \
-	  tests pltests template contrib scheme archive $(BUILT_TKNAMAZU)
+	  tests pltests template contrib scheme archive \
+	  $(BUILT_TKNAMAZU) $(BUILT_WAKATIDICT)
 
 DIST_SUBDIRS = m4 conf doc etc filter po lib nmz pl src lisp scripts man \
-	  tests pltests template contrib scheme archive $(BUILT_TKNAMAZU)
+	  tests pltests template contrib scheme archive \
+          $(BUILT_TKNAMAZU) $(BUILT_WAKATIDICT)
 
 
 bin_SCRIPTS = nmz-config
