--- a/pltests/mknmz-1.pl.in
+++ b/pltests/mknmz-1.pl.in
@@ -1,8 +1,8 @@
 #!%PERL% -w
 #
-# $Id: mknmz-1.pl.in,v 1.1 2004-09-30 12:34:54 opengl2772 Exp $
-# Copyright (C) 2004 Tadamasa Teranishi
-#               2004 Namazu Project All rights reserved.
+# $Id: mknmz-1.pl.in,v 1.2 2005-09-03 16:17:21 usu Exp $
+# Copyright (C) 2004-2005 Tadamasa Teranishi
+#               2004-2005 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -40,6 +40,17 @@ my $MKNMZ = pltests::binpath('mknmz');
 
 my @cmd;
 
+sub current_dir_filenum ($) {
+    my ($targetdir) = @_;
+    my $filenum;
+    opendir(DIR, $targetdir);
+    while (defined(my $dir = readdir(DIR))) {
+        $filenum++;
+    }
+    closedir(DIR);
+    return $filenum;
+}
+
 # help
 @cmd = ("$MKNMZ", "--help");
 pltests::putline($LOG, "  *** ", \@cmd);
@@ -58,9 +69,15 @@ if (-d "$INDEX") {
     mkdir("$INDEX");
 }
 
+my $origfilenum = current_dir_filenum($TARGET);
+
 # Simple indexing.
 @cmd = ("$MKNMZ", "-O", "$INDEX", "$TARGET");
 pltests::putline($LOG, "  *** ", \@cmd);
 my $status = pltests::logsyscmd($LOG, \@cmd);
 
-exit $status;
+#exit $status;
+exit $status if ($status != 0);
+exit 1 if ($origfilenum != current_dir_filenum($TARGET));
+exit 0;
+
