--- a/scripts/adnmz.in
+++ b/scripts/adnmz.in
@@ -1,10 +1,10 @@
 #! %PERL% -w
 # -*- Perl -*-
 # adnmz.pl - make NMZ.field.adjacency
-# $Id: adnmz.in,v 1.4 2004-09-19 03:21:07 opengl2772 Exp $
+# $Id: adnmz.in,v 1.5 2005-09-24 12:24:47 opengl2772 Exp $
 #
 # Copyright (C) 2001 Hajime BABA  All rights reserved.
-# Copyright (C) 2001 Namazu Project  All rights reserved.
+# Copyright (C) 2001-2005 Namazu Project  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -51,7 +51,7 @@ if (@ARGV){
     for my $argv (@ARGV){
         $argv =~ s/NMZ$// unless -d $argv;
         $argv = '.' if $argv eq '';
-        &adnmz($argv, $backup) if -d $argv;
+        &adnmz($argv, $backup);
     }
 }else{
     &adnmz('.', $backup);
@@ -62,6 +62,11 @@ exit(0);
 # read NMZ.field.link, and make NMZ.field.adjacency
 sub adnmz {
     my ($dir, $backup) = @_;
+
+    if (! -f "$dir/NMZ.i") {
+        print "Cannot open index. : $dir\n";
+        return;
+    }
 
     # pretreatment: read NMZ.r, then make %docid and $ndoc.
     my (%docid, $ndoc);
