--- a/scripts/lnnmz.in
+++ b/scripts/lnnmz.in
@@ -1,12 +1,12 @@
 #! %PERL% -w
 # -*- Perl -*-
 # lnnmz - program to make NMZ.field.link
-# $Id: lnnmz.in,v 1.6 2004-10-20 14:44:40 opengl2772 Exp $
+# $Id: lnnmz.in,v 1.7 2005-09-24 12:24:47 opengl2772 Exp $
 #
 # Copyright (C) 2000 osamu2001@livedoor.com  All rights reserved.
 # Copyright (C) 2000 furukawa@tcp-ip.or.jp  All rights reserved.
 # Copyright (C) 2001 Hajime BABA  All rights reserved.
-# Copyright (C) 2001 Namazu Project  All rights reserved.
+# Copyright (C) 2001-2005 Namazu Project  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -61,7 +61,7 @@ if (@ARGV){
     for my $argv (@ARGV){
         $argv =~ s/NMZ$// unless -d $argv;
         $argv = '.' if $argv eq '';
-        &lnnmz($argv, $backup) if -d $argv;
+        &lnnmz($argv, $backup);
     }
 } else {
     &lnnmz('.', $backup);
@@ -73,6 +73,11 @@ exit(0);
 # main routine
 sub lnnmz{
     my ($dir, $backup) = @_;
+
+    if (! -f "$dir/NMZ.i") {
+        print "Cannot open index. : $dir\n";
+        return;
+    }
 
     my $nmzi = new nmzidx($dir, 'r');
     my $fh = $nmzi->open_flist;
