* pl/conf.pl.in: $conf::SCHEMEDIR, $conf::ARCHIVEDIR, $conf::WAKATIDICDIR is added.

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -291,6 +291,8 @@ $WAKATI  = $@OPT_WAKATI_DEFAULT@;
 # $FILTERDIR = "@FILTERDIR@";
 # $TEMPLATEDIR = "@TEMPLATEDIR@";
 # $SCHEMEDIR = "@SCHEMEDIR@";
+# $ARCHIVEDIR = "@ARCHIVEDIR@";
+# $WAKATIDICDIR = "@WAKATIDICDIR@";
 
 1;
 
