--- a/tests/data/Makefile.am
+++ b/tests/data/Makefile.am
@@ -1,3 +1,3 @@
 ## Process this file with automake to produce Makefile.in
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
-SUBDIRS = en ja query html-split filter ja-spec emphasize dup-field ja-mac ja-appl90 decodebase64
+SUBDIRS = en ja query html-split filter ja-spec emphasize dup-field ja-mac ja-appl90 decodebase64 ja-wakati
