pl/conf.pl.in: Add win32/xdoc2txt.pl to %USE_FILTERS.

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -230,20 +230,25 @@ $WAKATI  = $@OPT_WAKATI_DEFAULT@;
 #
 %USE_FILTERS = (
   'application/applefile' => ['applefile.pl'],
-  'application/excel' => ['excel.pl', 'win32/oleexcel.pl'],  
+  'application/excel' => ['excel.pl', 'win32/oleexcel.pl', 'win32/xdoc2txt.pl'],  
   'application/gnumeric' => ['gnumeric.pl'],
   'application/ichitaro4' => ['win32/ichitaro456.pl'],
   'application/ichitaro5' => ['doccat.pl', 'taro56.pl',
-                              'win32/ichitaro456.pl', 'win32/oletaro.pl'],
+                              'win32/ichitaro456.pl', 'win32/oletaro.pl',
+                              'win32/xdoc2txt.pl'],
   'application/ichitaro6' => ['doccat.pl', 'taro56.pl',
-                              'win32/ichitaro456.pl', 'win32/oletaro.pl'],
-  'application/ichitaro7' => ['doccat.pl', 'taro7_10.pl', 'win32/oletaro.pl'],
+                              'win32/ichitaro456.pl', 'win32/oletaro.pl',
+                              'win32/xdoc2txt.pl'],
+  'application/ichitaro7' => ['doccat.pl', 'taro7_10.pl', 'win32/oletaro.pl',
+                              'win32/xdoc2txt.pl'],
   'application/macbinary' => ['macbinary.pl'],
-  'application/msword' => ['msword.pl', 'win32/olemsword.pl'],
+  'application/msword' => ['msword.pl', 'win32/olemsword.pl',
+                           'win32/xdoc2txt.pl'],
   'application/pdf' => ['pdf.pl'],
   'application/postscript' => ['postscript.pl'],
-  'application/powerpoint' => ['powerpoint.pl','win32/olepowerpoint.pl'],
-  'application/rtf' => ['rtf.pl', 'win32/olertf.pl'],
+  'application/powerpoint' => ['powerpoint.pl','win32/olepowerpoint.pl',
+                              'win32/xdoc2txt.pl'],
+  'application/rtf' => ['rtf.pl', 'win32/olertf.pl', 'win32/xdoc2txt.pl'],
   'application/vnd.kde.kivio' => ['koffice.pl'],
   'application/vnd.kde.kpresenter' => ['koffice.pl'],
   'application/vnd.kde.kspread' => ['koffice.pl'],
@@ -263,7 +268,8 @@ $WAKATI  = $@OPT_WAKATI_DEFAULT@;
   'application/x-dvi' => ['dvi.pl'],
   'application/x-gtar' => ['tar.pl'],
   'application/x-gzip' => ['gzip.pl'],
-  'application/x-js-taro' => ['doccat.pl', 'taro7_10.pl', 'win32/oletaro.pl'],
+  'application/x-js-taro' => ['doccat.pl', 'taro7_10.pl', 'win32/oletaro.pl',
+                           'win32/xdoc2txt.pl'],
   'application/x-lha' => ['lha.pl'],
   'application/x-rpm' => ['rpm.pl'],
   'application/x-shockwave-flash' => ['swf.pl'],
